--- a/package.json
+++ b/package.json
@@ -1,36 +1,48 @@
 {
+  "name": "template",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "prisma generate && next dev",
-    "build": "prisma generate && prisma db push && next build",
+    "dev": "next dev",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
-    "@prisma/client": "^4.14.0",
-    "@radix-ui/react-popover": "^1.0.6",
-    "@types/node": "^18.11.9",
-    "@types/react": "^18.0.25",
-    "bcrypt": "^5.1.0",
-    "focus-trap-react": "^10.2.1",
+    "@radix-ui/react-popover": "^1.0.2",
+    "@radix-ui/react-tooltip": "^1.0.2",
+    "@types/node": "20.2.5",
+    "@types/react": "18.2.7",
+    "@types/react-dom": "18.2.4",
+    "@vercel/analytics": "^0.1.6",
+    "classnames": "^2.3.2",
+    "encoding": "^0.1.13",
+    "firebase": "^9.22.1",
+    "focus-trap-react": "^10.0.2",
     "framer-motion": "^10.12.18",
     "lucide-react": "^0.258.0",
-    "next": "^13.4.2",
-    "next-auth": "^4.22.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hot-toast": "^2.4.1"
+    "ms": "^2.1.3",
+    "next": "13.4.4",
+    "prop-types": "^15.8.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-markdown": "^8.0.4",
+    "react-wrap-balancer": "^0.3.0",
+    "typescript": "5.0.4",
+    "use-debounce": "^9.0.3"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
-    "autoprefixer": "^10.4.4",
-    "eslint": "8.11.0",
-    "eslint-config-next": "^13.0.5",
-    "postcss": "^8.4.12",
-    "prisma": "^4.14.0",
-    "tailwindcss": "^3.0.23",
-    "typescript": "^4.6.2"
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/line-clamp": "^0.4.2",
+    "@tailwindcss/typography": "^0.5.9",
+    "@types/ms": "^0.7.31",
+    "autoprefixer": "^10.4.14",
+    "concurrently": "^7.6.0",
+    "postcss": "^8.4.21",
+    "prettier": "^2.8.2",
+    "prettier-plugin-tailwindcss": "^0.2.1",
+    "tailwindcss": "^3.2.4"
   }
 }
