--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,6 @@
-NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyDKkwlFBJJvhMF7oaz0BuN7CfL1QmPhDHA
-NEXT_PUBLIC_FIREBASE_AUYH_DOMAIN=fire-base-training-app.firebaseapp.com
-NEXT_PUBLIC_FIREBASE_PROJECT_ID=fire-base-training-app
-NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=fire-base-training-app.appspot.com
-NEXT_PUBLIC_FIREBASE_MESSAGEING_SENDER_ID=724878599848
-NEXT_PUBLIC_FIREBASE_APP_ID=1:724878599848:web:5daaf1dc98d9887447849d
+FIREBASE_API_KEY=AIzaSyDKkwlFBJJvhMF7oaz0BuN7CfL1QmPhDHA
+FIREBASE_AUYH_DOMAIN=fire-base-training-app.firebaseapp.com
+FIREBASE_PROJECT_ID=fire-base-training-app
+FIREBASE_STORAGE_BUCKET=fire-base-training-app.appspot.com
+FIREBASE_MESSAGEING_SENDER_ID=724878599848
+FIREBASE_APP_ID=1:724878599848:web:5daaf1dc98d9887447849d
