--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "classnames": "^2.3.2",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
+    "firebase": "^9.22.1",
     "focus-trap-react": "^10.0.2",
     "framer-motion": "^8.4.2",
     "lucide-react": "0.105.0-alpha.4",
     "ms": "^2.1.3",
-    "firebase": "^9.22.1",
     "next": "13.4.2",
+    "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.4",
